--- a/style.css
+++ b/style.css
@@ -1,4 +1,17 @@
 body{
     color: white;
     background-color: rgb(24, 23, 23);
+    font-family:= 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    max-width: 1200px;
+    padding: 15px;
+}
+header{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+li{
+    display: inline-block;
+    margin: 20px;
 }
